# nuwa-example

./: .gitignore  README.md  example.py  pyproject.toml
.github/workflows/: publish.yml
example_project/: .gitignore  README.md  example.py  pyproject.toml
example_project/.github/workflows/: publish.yml
example_project/example_project/: __init__.py  example_project_lib.pyi
example_project/nim/: example_project_lib.nim  helpers.nim
example_project/tests/: test_example_project.py
nim/: helpers.nim  nuwa_example_lib.nim
nuwa_example/: __init__.py  nuwa_example_lib.pyi
tests/: test_nuwa_example.py
