[build-system]
requires = ["nuwa-build"]
build-backend = "nuwa_build"

[project]
name = "nuwa-example"
version = "0.1.0"
description = "A Nim extension for Python"
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[tool.nuwa]
nim-source = "nim"
module-name = "nuwa_example"
lib-name = "nuwa_example_lib"
entry-point = "nuwa_example_lib.nim"
# Nimble dependencies (auto-installed before build)
nimble-deps = ["nimpy", "nuwa_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "."
