[build-system]
requires = ["nuwa-build"]
build-backend = "nuwa_build"

[project]
name = "example_project"
version = "0.1.0"
description = "A Nim extension for Python"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.nuwa]
nim-source = "nim"
module-name = "example_project"
lib-name = "example_project_lib"
entry-point = "example_project_lib.nim"
# Nimble dependencies (auto-installed before build)
# Tip: Pin versions using "@" (e.g. "package@1.2.3") or ranges ("package >= 1.0")
nimble-deps = ["nimpy@0.2.1", "nuwa_sdk@0.3.0"]

# Build profiles - predefined compiler flag sets for different scenarios
# Use: nuwa develop --profile dev
[tool.nuwa.profiles.dev]
nim-flags = ["-d:debug", "--debugger:native", "--linenos:on", "--stacktrace:on"]

# Use: nuwa build --profile release
[tool.nuwa.profiles.release]
nim-flags = ["-d:release", "--opt:speed", "--stacktrace:off", "--checks:off"]

# Use: nuwa develop --profile bench
[tool.nuwa.profiles.bench]
nim-flags = ["-d:release", "--opt:speed", "--stacktrace:on"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "."
